--- a/lfe.config
+++ b/lfe.config
@@ -14,3 +14,26 @@
    #(app
      (#(mod #(lcli ()))))))
 
+#(logging (
+  #(log-level info)
+  #(backend lager)
+  #(colored true)
+  #(colors (#(timestamp (color green))
+            #(process (color cyan))
+            #(date (color green))
+            #(time (color green))
+            #(modfunc (color yellow))
+            #(message (color green))
+            #(debug (color greenb))
+            #(info (color blue))
+            #(notice (color cyan))
+            #(warning (color yellow))
+            #(error (color red))
+            #(critical (color yellowb))
+            #(alert (color magentab))
+            #(emergency (color redb))))
+  #(options (#(lager_console_backend (
+               info
+               #(logjam-formatter
+                 (date " " time " [" pid "] [" severity "] " message "\n"))))))))
+
