Added getopt dep.

--- a/rebar.config
+++ b/rebar.config
@@ -4,6 +4,7 @@
 
 {deps, [
    {lfe, ".*", {git, "https://github.com/rvirding/lfe.git", {tag, "v0.10.1"}}},
+   {getopt, ".*", {git, "https://github.com/oubiwann/getopt-erl.git", {tag, "v0.8.3"}}},
    {logjam, ".*", {git, "git://github.com/lfex/logjam.git", {tag, "0.3.0"}}}
   ]}.
 
