--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,36 @@
+# erlang
 .eunit
-log/*
-deps
+*.o
 *.beam
 *.plt
-*.sw[po]
-ebin/*
-_build/*
+erl_crash.dump
+.concrete/DEV_MODE
+
+# rebar 2.x
+.rebar
+rel/example_project
+ebin/*.beam
+deps
+
+# rebar 3
+.rebar3
+rebar3.crashdump
+_build/
+_checkouts/
 rebar.lock
-priv/*
-docs/current
+
+# emacs
+*~
+\#*\#
+.\#*
+.emacs.desktop
+.emacs.desktop.lock
+
+# apple
+.DS_Store
+
+# misc
+/priv/images/drafts/*
+/doc/*
+/priv/output/*
+/docs/user-guide/build/*
