--- a/rebar.config
+++ b/rebar.config
@@ -1,29 +1,55 @@
-{eunit_compile_opts, [
-   {src_dirs, ["test"]}
-  ]}.
+{erl_opts, [debug_info, {no_auto_import, [{link,1}, {get,1}]}]}.
 
 {deps, [
-   {lfe, ".*", {git, "https://github.com/rvirding/lfe.git", {tag, "v0.10.1"}}},
-   {getopt, ".*", {git, "https://github.com/oubiwann/getopt-erl.git", {tag, "v0.8.3"}}},
-   {clj, ".*", {git, "git://github.com/lfex/clj.git", {tag, "0.3.0"}}},
-   {logjam, ".*", {git, "git://github.com/lfex/logjam.git", {tag, "0.3.0"}}}
-  ]}.
+  {lfe, "2.1.1"},
+  {getopt, "1.0.2"},
+  {logjam, "1.2.0"}
+]}.
 
 {plugins, [
-   {lodox, ".*", {git, "https://github.com/quasiquoting/lodox.git", {tag, "0.12.5"}}},
-   {'lfe-compile', ".*", {git, "https://github.com/lfe-rebar3/compile.git", {tag, "0.2.2"}}},
-   {'lfe-version', ".*", {git, "https://github.com/lfe-rebar3/version.git", {tag, "0.2.1"}}},
-   {'lfe-clean', ".*", {git, "https://github.com/lfe-rebar3/clean.git", {tag, "0.1.0"}}}
-  ]}.
+  {rebar3_lfe, "0.4.4"}
+]}.
 
 {provider_hooks, [
-   {pre, [{compile, {lfe, compile}}]}
-  ]}.
+  {pre, [{compile, {lfe, compile}}]}
+]}.
 
-{lodox,
- [{apps,
-   [{lcli,
-     [{'source-uri',
-       "https://github.com/oubiwann/lcli/blob/{version}/{filepath}#L{line}"},
-      {'output-path', "docs/current"}]}]}
-  ]}.
+{xref_checks, [
+  undefined_function_calls, undefined_functions, locals_not_used,
+  deprecated_function_calls, deprecated_functions
+]}.
+
+{dialyzer, [
+  {warnings, [unknown]},
+  {plt_extra_apps, [eunit]}
+]}.
+
+{profiles, [
+  {test, [
+    {deps, [
+      {proper, "1.4.0"},
+      {ltest, "0.13.4"}
+    ]},
+    {plugins, [
+      {rebar3_proper, "0.12.1"}
+    ]},
+    {eunit_opts, [verbose]},
+    {erl_opts, [
+      {src_dirs, ["src", "test"]}
+    ]}
+  ]}
+]}.
+
+{alias, [
+  {coverage, [
+    {proper, "-c"},
+    {cover, "-v --min_coverage=0"}
+  ]},
+  {check, [
+    compile,
+    xref,
+    %%dialyzer,
+    {lfe, ltest, "-tall"},
+    coverage
+  ]}
+]}.
