Project metadata, publishing, and CI/CD.

--- a/rebar.config
+++ b/rebar.config
@@ -1,9 +1,9 @@
-{erl_opts, [debug_info, {no_auto_import, [{link,1}, {get,1}]}]}.
+{erl_opts, [debug_info, {no_auto_import, [{get,1}]}]}.
 
 {deps, [
   {lfe, "2.1.1"},
   {getopt, "1.0.2"},
-  {logjam, "1.2.0"}
+  {logjam, "1.2.2"}
 ]}.
 
 {plugins, [
