A big lift toward (re)implementing commands.

--- a/rebar.config
+++ b/rebar.config
@@ -2,8 +2,10 @@
 
 {deps, [
   {lfe, "2.1.1"},
-  {getopt, "1.0.2"},
-  {logjam, "1.2.2"}
+  {getopt, "1.1.0", {pkg, erlsci_getopt}},
+  {logjam, "1.2.2"},
+  {lutil, "0.13.4"},
+  {bbmustache, "1.12.2"}
 ]}.
 
 {plugins, [
