Added xref ignores.

--- a/rebar.config
+++ b/rebar.config
@@ -21,6 +21,13 @@
   deprecated_function_calls, deprecated_functions
 ]}.
 
+%% These don't see to work for functions `lib-include`ed ...?
+{xref_ignores, [
+  {lcli, '--loaded-lcli-records--'},
+  {'lcli-cmds', '--loaded-lcli-records--'},
+  {'lcli-usage', '--loaded-lcli-records--'}
+]}.
+
 {dialyzer, [
   {warnings, [unknown]},
   {plt_extra_apps, [eunit]}
